--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "thesis_bin"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Alexander Koch <kochalexander@gmx.net>"]
 
 [dependencies]
+log = "0.4"
+env_logger = "0.6"
