--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "thesis_bin"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Alexander Koch <kochalexander@gmx.net>"]
+edition = "2018"
 
 [dependencies]
 log = "0.4"
