--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "thesis_bin"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Alexander Koch <kochalexander@gmx.net>"]
 edition = "2018"
 
 [dependencies]
 log = "0.4"
 env_logger = "0.6"
-rustyline = "3.0.0"
+rustyline = "3.0"
+docopt = "1"
+serde = { version = "1", features = ["derive"] }
