--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "thesis_bin"
-version = "0.1.8"
+version = "0.1.9"
 authors = ["Alexander Koch <kochalexander@gmx.net>"]
 edition = "2018"
 
@@ -8,5 +8,4 @@ edition = "2018"
 log = "0.4"
 env_logger = "0.6"
 rustyline = "3.0"
-docopt = "1"
-serde = { version = "1", features = ["derive"] }
+clap = "2.33"
